--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -124,6 +124,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="packageTab">packageTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="suiteTab">suiteTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -182,6 +187,13 @@
                   <a name="packageTab">
                   </a> <!-- packageTab -->
                   <span class="method-name">packageTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="suiteTab">
+                  </a> <!-- suiteTab -->
+                  <span class="method-name">suiteTab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -250,36 +262,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'agent')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 18254);
+data.setCell(0, 3, 23578);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'csu')
+data.setCell(1, 1, 'login')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 12084);
+data.setCell(1, 3, 12343);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'login')
+data.setCell(2, 1, 'suiteTab')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 8236);
+data.setCell(2, 3, 8688);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'voyageTab')
+data.setCell(3, 1, 'csu')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 4602);
+data.setCell(3, 3, 6572);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'menu')
+data.setCell(4, 1, 'packageTab')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 4114);
+data.setCell(4, 3, 5772);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'packageTab')
+data.setCell(5, 1, 'menu')
 data.setCell(5, 2, 'tests.BookingTest')
-data.setCell(5, 3, 4037);
+data.setCell(5, 3, 4123);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'voyageTab')
+data.setCell(6, 2, 'tests.BookingTest')
+data.setCell(6, 3, 3076);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -312,27 +328,31 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">1334 ms</span>
+                <span class="method-start">3126 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">menu</span>
-                <span class="method-start">9588 ms</span>
+                <span class="method-start">15481 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">csu</span>
-                <span class="method-start">13706 ms</span>
+                <span class="method-start">19610 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">agent</span>
-                <span class="method-start">25795 ms</span>
+                <span class="method-start">26187 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">voyageTab</span>
-                <span class="method-start">44052 ms</span>
+                <span class="method-start">49767 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">packageTab</span>
-                <span class="method-start">48667 ms</span>
+                <span class="method-start">52843 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">suiteTab</span>
+                <span class="method-start">58615 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
