--- a/test-output/index.html
+++ b/test-output/index.html
@@ -182,19 +182,10 @@
                   <a name="suiteTab">
                   </a> <!-- suiteTab -->
                   <span class="method-name">suiteTab</span>
-                  <div class="stack-trace">java.lang.AssertionError: Failed to select a suite: element click intercepted: Element &lt;span _ngcontent-mbj-c759=&quot;&quot; kendotooltip=&quot;&quot; class=&quot;status status-approve ng-star-inserted&quot; title=&quot;Available&quot;&gt;...&lt;/span&gt; is not clickable at point (905, 319). Other element would receive the click: &lt;div _ngcontent-mbj-c462=&quot;&quot; class=&quot;ngx-spinner-overlay ng-tns-c462-0 ng-trigger ng-trigger-fadeIn ng-star-inserted&quot; style=&quot;background-color: rgba(51, 51, 51, 0.8); z-index: 99999; position: fixed; opacity: 1;&quot;&gt;...&lt;/div&gt;
-  (Session info: chrome=130.0.6723.119)
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [85bbdf43f2d1e4fb45693e695e91ec33, clickElement {id=f.EBC2EB1B6731F2B0597127676DA37BC2.d.323BA71A61FFB61AC115728CFD0BAE5A.e.771}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 130.0.6723.119, chrome: {chromedriverVersion: 130.0.6723.116 (6ac35f94ae3..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:61987}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:61987/devtoo..., se:cdpVersion: 130.0.6723.119, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (85bbdf43f2d1e4fb45693e695e91ec33)] -&gt; xpath: //span[@title=&apos;Available&apos;]]
-Session ID: 85bbdf43f2d1e4fb45693e695e91ec33
-	at pages.Suite.suites(Suite.java:95)
-	at tests.BookingTest.suiteTab(BookingTest.java:191)
+                  <div class="stack-trace">java.lang.AssertionError: Suite tab not selected. expected [true] but found [false]
+	at tests.BookingTest.suiteTab(BookingTest.java:190)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 26 stack frames
+... Removed 28 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -211,8 +202,8 @@ Session ID: 85bbdf43f2d1e4fb45693e695e91ec33
                   <a name="previewTab">
                   </a> <!-- previewTab -->
                   <span class="method-name">previewTab</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.previewTab() on instance tests.BookingTest@60dce7ea depends on not successfully finished methods 
-[tests.BookingTest.suiteTab() on instance tests.BookingTest@60dce7ea]
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.previewTab() on instance tests.BookingTest@1ef3efa8 depends on not successfully finished methods 
+[tests.BookingTest.suiteTab() on instance tests.BookingTest@1ef3efa8]
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 18 stack frames
 </div> <!-- stack-trace -->
@@ -331,31 +322,31 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'agent')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 24067);
+data.setCell(0, 3, 73985);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'csu')
+data.setCell(1, 1, 'login')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 12596);
+data.setCell(1, 3, 10045);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'login')
+data.setCell(2, 1, 'voyageTab')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 10157);
+data.setCell(2, 3, 8783);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'voyageTab')
+data.setCell(3, 1, 'csu')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 5159);
+data.setCell(3, 3, 6191);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'suiteTab')
+data.setCell(4, 1, 'packageTab')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 4699);
+data.setCell(4, 3, 4855);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'menu')
 data.setCell(5, 2, 'tests.BookingTest')
-data.setCell(5, 3, 4112);
+data.setCell(5, 3, 248);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'packageTab')
+data.setCell(6, 1, 'suiteTab')
 data.setCell(6, 2, 'tests.BookingTest')
-data.setCell(6, 3, 3899);
+data.setCell(6, 3, 196);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'previewTab')
 data.setCell(7, 2, 'tests.BookingTest')
@@ -397,33 +388,33 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">1870 ms</span>
+                <span class="method-start">1665 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">menu</span>
-                <span class="method-start">12043 ms</span>
+                <span class="method-start">11723 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">csu</span>
-                <span class="method-start">16160 ms</span>
+                <span class="method-start">11975 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">agent</span>
-                <span class="method-start">28760 ms</span>
+                <span class="method-start">18172 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">voyageTab</span>
-                <span class="method-start">52827 ms</span>
+                <span class="method-start">92161 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">packageTab</span>
-                <span class="method-start">57986 ms</span>
+                <span class="method-start">100947 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">suiteTab</span>
-                <span class="method-start">61885 ms</span>
+                <span class="method-start">105806 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
